<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/COLOR_BLUE_BG"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LLLoginContainerLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLoginLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />


        <LinearLayout
            android:id="@+id/LLLoginContainer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/LLLoginContainerLogo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundededgebox1"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Username"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_model8"
                    android:hint="@string/login_username"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="14sp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Telephone No"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextTelNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_model8"
                    android:hint="@string/login_agentid"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Password"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_model8"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/EditTextGCMRegId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/header_model8"
                    android:hint="getting reg id . . "
                    android:padding="5dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogin_MainActivity"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/LLLoginContainer"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/buttonLoginLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundededgebox_buttongreen"
                android:text="@string/login_login"
                android:textColor="@color/COLOR_BLACK"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonLoginRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundededgebox_buttongreen"
                android:text="@string/login_register"
                android:textColor="@color/COLOR_BLACK"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLoginChangeServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundededgebox1"
                android:padding="5dp"
                android:text="*"
                android:textColor="@color/COLOR_BLACK"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>